syntax = "proto3";

option java_multiple_files = true;
option java_package = "bigd.grpc";
package mapreduce;

service MapReducer {
    // Sends a greeting
    rpc mapReduce (MapReduceRequest) returns (MapReduceReply) {}
}

// The request message containing the user's name.
message MapReduceRequest {
    string operation = 1;
    string uri = 2;
    int32 shardNumber = 3;
    int32 totalShards = 4;
}

// The response message containing the greetings
message MapReduceReply {
    string message = 1;
}